# Fatigue_detecting

./: .gitignore  CRingBuffer.h  LICENSE  README.md  UIproject.pro  detect.cpp  detect.h  detection.cpp  detection.h  faceget.cpp  faceget.h  opencvQT安装.txt  project0.pro  test.cpp  widget.cpp  widget.h  workspace.code-workspace
src/: CMakeLists.txt  CRingBuffer.h  Detect.hpp  faceGet.hpp  main.hpp  test.cpp  testCircle.cpp  videoCap.hpp
src/dlibAndModel/dlib/docs/: algorithms.html  api.html  bayes.html  change_log.html  compression.html  dnn_face_recognition_ex.cpp.html  dnn_mmod_find_cars2_ex.cpp.html  dnn_mmod_train_find_cars_ex.cpp.html  face_clustering.py.html  face_landmark_detection.py.html  faq.html  howto_contribute.html  imaging.html  kernel_1a.html  kernel_1b.html  kernel_1db.html  kernel_1ea.html  kernel_1ec.html  kernel_2a.html  kernel_3b.html  license.html  linear_algebra.html  metaprogramming.html  network.html  old_change_log.html  old_release_notes.html  parsing.html  release_notes.html  term_index.html
src/dlibAndModel/dlib/docs/dlib/data_io/: load_image_dataset.h.html  load_image_dataset_abstract.h.html
src/dlibAndModel/dlib/docs/dlib/dnn/: cpu_dlib.cpp.html  cpu_dlib.h.html  input.h.html  layers.h.html  loss_abstract.h.html  tensor.h.html  tensor_tools.cpp.html  tensor_tools.h.html
src/dlibAndModel/dlib/docs/dlib/gui_widgets/: widgets.h.html
src/dlibAndModel/dlib/docs/dlib/image_processing/: shape_predictor_trainer.h.html
src/dlibAndModel/dlib/docs/examples/: CMakeLists.txt.html
src/dlibAndModel/dlib/docs/python/: genindex.html
(+95 files in other folders)
